# bispl-model-deploy

./: .gitignore  .gitmodules  Makefile  README.md
.conf/: .pre-commit-config.yaml  autoflake.cfg  flake8.cfg
vessl/: pyproject.toml
vessl-deploy/: README.md  pyproject.toml
vessl-deploy/medical_x_vl/: inference.py
vessl-deploy/spmm/: inference.py
